Google Analytics Code :smile:
So, now I CAN see who accessed my site. :)

--- a/cilkre/about.html
+++ b/cilkre/about.html
@@ -5,6 +5,7 @@
 <link rel="icon" href="cilkreStartup%20Logo.ico">
 <link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="cookies.js"></script>
+<script type="text/javascript" src="GoogleAnalytics.js"></script>
 </head>
 
 <style>
