--- a/cilkre/main.html
+++ b/cilkre/main.html
@@ -5,6 +5,7 @@
 <link rel="icon" href="cilkre%20Logo.ico">
 <link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="cookies.js"></script>
+<script type="text/javascript" src="GoogleAnalytics.js"></script>
 
 <meta name="keywords" content="cilkre, HIHIQY1, C#, game, boring, HIHIQY2">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
