--- a/cilkre/index.html
+++ b/cilkre/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Loading...</title>
+
+<script type="text/javascript" src="GoogleAnalytics.js"></script>
 </head>
 <body onload="waitscript();">
 <style>
