--- a/cilkre/m_about.html
+++ b/cilkre/m_about.html
@@ -5,7 +5,9 @@
 <link rel="icon" href="cilkreStartup%20Logo.ico">
 <link rel="stylesheet" type="text/css" href="m_style.css">
 <script type="text/javascript" src="cookies.js"></script>
+<script type="text/javascript" src="GoogleAnalytics.js"></script>
 
+<meta name="keywords" content="cilkre, HIHIQY1, C#, game, boring, HIHIQY2">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -16,7 +18,6 @@
 background-color: lightgreen;
 border-radius: 10%;
 padding: 10px 0px;
-margin-bottom: 75px;
 }
 </style>
 
@@ -47,7 +48,7 @@ id="cookieAcceptButton" onClick="allowCookies('allowCookie')" value="Accept">
 <span id="p1span2">This game may seem weird, but really, it's just a simple... Well...
 <br>Could you call it a game?<br>In this game, you have to press form buttons.<br>
 I bet you've seen form buttons already. In fact, here is one:<br>
-<input type=button value="Hello :)" style="padding:1% 10%;" id="textbutton"><br>
+<input type=button value="Hello :)" style="padding:1% 10%;" id="textbutton" onClick="alert('Boom?');"><br>
 When you press these form buttons, another button will pop up.<br>
 After pressing some of these form buttons, you finish the level.<br>
 Seems easy right?<br>
