--- a/cilkre/m_main.html
+++ b/cilkre/m_main.html
@@ -5,6 +5,7 @@
 <link rel="icon" href="cilkre%20Logo.ico">
 <link rel="stylesheet" type="text/css" href="m_style.css">
 <script type="text/javascript" src="cookies.js"></script>
+<script type="text/javascript" src="GoogleAnalytics.js"></script>
 
 <meta name="keywords" content="cilkre, HIHIQY1, C#, game, boring, HIHIQY2">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -16,7 +17,6 @@
 background-color: rgb(220, 220, 220);
 border-radius: 15%;
 padding: 10px 0px;
-margin-bottom: 75px;
 }
 </style>
 
