--- a/cilkre/index.html
+++ b/cilkre/index.html
@@ -27,7 +27,19 @@ animation: loadanim 1.25s linear 0s 3;
 </style>
 <div class="loadingring"></div>
 
-<script type="text/javascript" src="GoogleAnalytics.js"></script>
+<!-- Begin Google analytics code -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99870417-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- End Google analytics code -->
+
 </body>
 <script>
 function waitscript() {
