--- a/cilkre/index.html
+++ b/cilkre/index.html
@@ -46,11 +46,11 @@ function waitscript() {
 setTimeout("redirect()", 3000);
 }
 function redirect() {
-if (screen.width <= 1000) {
-window.location.replace("m_main.html");
+if (screen.width >= 1000) {
+window.location.replace("main.html");
 }
 else {
-window.location.replace("main.html");
+window.location.replace("m_main.html");
 }
 }
 </script>
