Added some projects.
+ Added background and stylesheet.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html>
 <head>
 <title>All of my projects</title>
+
+<link rel="stylesheet" type="text/css" href="projectslayout.css">
+<style>
+body { background-image: url('bg.png'); }
+</style>
 </head>
 <body>
 <h1>HIHIQY1's projects</h1>
 <br>
 <li><a href="cilkre/index.html">cilkre</a></li>
+<li><a href="SoftwareDownloader/index.html">SoftwareDownloader</a></li>
+<li><a href="Srenec/index.html">Srenec</a></li>
+<li><a href="OpenCloseDiskTray/index.html">OpenCloseDiskTray</a></li>
 <br><br>
 <p>End of page</p>
 </body>
