Added a new project (Diaa)
It's a presentation program/application.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body { background-image: url('bg.png'); }
 <h1>HIHIQY1's projects</h1>
 <br>
 <li><a href="cilkre/index.html">cilkre</a></li>
+<li><a href="Diaa/index.html">Diaa</a></li>
 <li><a href="SoftwareDownloader/index.html">SoftwareDownloader</a></li>
 <li><a href="Srenec/index.html">Srenec</a></li>
 <li><a href="OpenCloseDiskTray/index.html">OpenCloseDiskTray</a></li>
