--- a/Diaa/index.html
+++ b/Diaa/index.html
@@ -14,7 +14,7 @@ text-align: center;
 width: 100%;
 height: 0;
 background-color: transparent;
-margin: auto;
+margin: 0px 0px;
 animation: piston 5s ease-in-out infinite;
 }
 
@@ -55,10 +55,12 @@ line-height: 0px;
 <p>Of course, you can only edit and view presentations made in this program.</p><br>
 <div id="div_space"></div>
 <p>You can download the most recent version here:</p><br>
-<div id="div_space"></div>
-<p><a href="Diaa0.1.4.exe">Diaa download (v0.1.4)</a></p><br>
+<p><a href="Diaa0.1.6.exe">Diaa download (v0.1.6)</a></p><br>
 <div id="div_space"></div>
 <p>This program is still in early access, so bugs are present.</p><br>
+<div id="div_space"></div>
+<p>For older versions, click here:</p><br>
+<p><a href="older.html">Older versions</a></p><br>
 </span>
 </body>
 </html>
