--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body { background-image: url('bg.png'); }
 <li><a href="Diaa/index.html">Diaa</a></li>
 <li><a href="SoftwareDownloader/index.html">SoftwareDownloader</a></li>
 <li><a href="Srenec/index.html">Srenec</a></li>
+<li><a href="Slidea/index.html">Slidea</a></li>
 <li><a href="OpenCloseDiskTray/index.html">OpenCloseDiskTray</a></li>
 <br><br>
 <p>End of page</p>
