not relative links anymore
now it works everywhere on the site

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 <html lang="en">
 <head>
 <title>Unknown page</title>
-<link rel="stylesheet" type="text/css" href="projectslayout.css">
+<link rel="stylesheet" type="text/css" href="https://HIHIQY1.github.io/HIHIQY1/projectslayout.css">
 
 <style>
 div#container {
@@ -27,7 +27,7 @@ line-height: 25%;
 <h1>Yo this page doesn't exist.</h1>
 <p>You can exit, if you want.</p>
 <p>Or you can stay here.</p>
-<a href="index.html">Click here if you want to go back</a>
+<a href="https://HIHIQY1.github.io/HIHIQY1/index.html">Click here if you want to go back</a>
 </div>
 
 <script>
