--- a/404nl.html
+++ b/404nl.html
@@ -5,7 +5,7 @@ permalink: /404.html
 <html lang="en">
 <head>
 <title>Onbekende pagina</title>
-<link rel="stylesheet" type="text/css" href="projectslayout.css">
+<link rel="stylesheet" type="text/css" href="https://HIHIQY1.github.io/HIHIQY1/projectslayout.css">
 
 <style>
 div#container {
@@ -27,7 +27,7 @@ line-height: 25%;
 <h1>Yo deze pagina bestaat niet.</h1>
 <p>Je kan weg gaan, als je wil.</p>
 <p>Of je kan hier blijven.</p>
-<a href="index.html">Klik hier als je terug wilt gaan</a>
+<a href="https://HIHIQY1.github.io/HIHIQY1/index.html">Klik hier als je terug wilt gaan</a>
 </div>
 
 <script>
