Added about page
Just Dutch for now :/

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <title>All of my projects</title>
 
 <link rel="stylesheet" type="text/css" href="projectslayout.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body { background-image: url('bg.png'); }
+a.bottom {position: absolute; bottom: 1%;}
+a.right {position: absolute; right: 1%; color: transparent;}
 </style>
 </head>
 <body>
@@ -20,5 +23,6 @@ body { background-image: url('bg.png'); }
 <li><a href="SpemTM/index.html">SpemTM / SpamTM</a></li>
 <br><br>
 <p>End of page</p>
+<a class="bottom right" href="About/home.html">About</a>
 </body>
 </html>
