Added a new project
My own text editor! :D

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ a.right {position: absolute; right: 1%; color: transparent;}
 <br>
 <li><a href="cilkre/index.html">cilkre</a></li>
 <li><a href="Diaa/index.html">Diaa</a></li>
+<li><a href="Qy's Text Editor/home.html">Qy's Text Editor</a></li>
 <li><a href="SoftwareDownloader/index.html">SoftwareDownloader</a></li>
 <li><a href="Srenec/index.html">Srenec</a></li>
 <li><a href="OpenCloseDiskTray/index.html">OpenCloseDiskTray</a></li>
