Updated my about page
:D

--- a/About/home.html
+++ b/About/home.html
@@ -26,6 +26,15 @@ title="Dit zijn (kort uitgelegd) games waarin je van alles kan bekijken, maken, 
 Ook heb ik zo'n ding dat ik er niet echt tegen kan dat er <b>IETS NIET GECENTREERD IS</b>. Alhoewel dit niet
 <b>HEEL</b> veel onrust veroorzaakt, is het wel een beetje erg irritant. Vandaar dat de meeste dingen op<br>
 deze pagina in het midden staan of gespiegeld zijn. :)</p></div>
+<div class="content2"><span><h1>Mijn computer</h1>
+<p>Hier kan je alle specificaties van mijn pc zien &#x1f642;<br><br>
+CPU: Intel Core i5 4460<br>
+GPU: Elitegroup GeForce GTX 745<br>
+RAM: DDR3 8192 MB dual channel<br>
+Moederbord: Medion H81H3-EM2<br>
+Opslag: Seagate ST2000DX001-1CM164
+</span>
+</div>
 <div class="footer"><a href="contact.html"><p id="footeritem1">Contact</p></a></div>
 </body>
 </html>
