--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ a.right {position: absolute; right: 1%; color: transparent;}
 <h1>HIHIQY1's projects</h1>
 <br>
 <li><a href="cilkre/index.html">cilkre</a></li>
+<li><a href="Agenqa/index.html">Agenqa</a></li>
 <li><a href="Diaa/index.html">Diaa</a></li>
 <li><a href="Qy's Text Editor/home.html">Qy's Text Editor</a></li>
 <li><a href="SoftwareDownloader/index.html">SoftwareDownloader</a></li>
