--- a/Agenqa/index.html
+++ b/Agenqa/index.html
@@ -23,8 +23,10 @@ You can <b>down</b>load it <b>down</b> below
 <span class="horcenter">
 <h1>Downloa<span id="q">d</span>s</h1>
 <p>You can download Agen<span id="q">q</span>a here</p>
+<a href="https://github.com/HIHIQY1/HIHIQY1/releases/download/agenqa0.5/AgenqaInstaller0.3.exe" class="link"><b>Agen<span id="q" style="text-decoration:underline;">q</span>a v0.5 (Agen<span id="q" style="text-decoration:underline;">q</span>aInstaller v0.3)</b></a><br>
 <a href="https://github.com/HIHIQY1/HIHIQY1/releases/download/agenqa0.4/AgenqaInstaller0.2.exe" class="link">Agen<span id="q" style="text-decoration:underline;">q</span>a v0.4 (Agen<span id="q" style="text-decoration:underline;">q</span>aInstaller v0.2)</a><br>
-<a href="https://github.com/HIHIQY1/HIHIQY1/releases/download/agenqa0.3/AgenqaInstaller0.1.exe" class="link">Agen<span id="q" style="text-decoration:underline;">q</span>a v0.3 (Agen<span id="q" style="text-decoration:underline;">q</span>aInstaller v0.1)</a>
+<a href="https://github.com/HIHIQY1/HIHIQY1/releases/download/agenqa0.3/AgenqaInstaller0.1.exe" class="link">Agen<span id="q" style="text-decoration:underline;">q</span>a v0.3 (Agen<span id="q" style="text-decoration:underline;">q</span>aInstaller v0.1)</a><br><br>
+<a href="changelog.txt" class="link">Changelog</a>
 </span>
 </div>
 <div id="footer">
