--- a/Avoiid/spel.html
+++ b/Avoiid/spel.html
@@ -1,5 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
+<!-- /\/OID -->
+<!--  v0.3  -->
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="styles.css">
