--- a/Avoiid/spel.html
+++ b/Avoiid/spel.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
-<!-- /\/OID -->
-<!--  v0.3  -->
+<!-- /\/OIID -->
+<!--  v0.4  -->
+<!-- Made by HIHIQY1 -->
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="styles.css">
