Updated Avoiid to v0.5
So that when you copy all the code ( someone already did >:( ) you can't run the game.

--- a/Avoiid/spel.html
+++ b/Avoiid/spel.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <!-- /\/OIID -->
-<!--  v0.4  -->
+<!--  v0.5  -->
 <!-- Made by HIHIQY1 -->
+<!-- Do not copy! -->
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="styles.css">
