--- a/Avoiid/spel.html
+++ b/Avoiid/spel.html
@@ -1,10 +1,21 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <!-- /\/OIID -->
-<!--  v0.5  -->
+<!--  v0.6  -->
 <!-- Made by HIHIQY1 -->
 <!-- Do not copy! -->
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99870417-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-99870417-1');
+</script>
+
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="styles.css">
 <title>AVOIID</title>
