Renewed the main page :D
ye

--- a/index.html
+++ b/index.html
@@ -1,30 +1,68 @@
-<!DOCTYPE html>
-<html>
+﻿<html>
 <head>
-<title>All of my projects</title>
-
-<link rel="stylesheet" type="text/css" href="projectslayout.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body { background-image: url('bg.png'); }
-a.bottom {position: absolute; bottom: 1%;}
-a.right {position: absolute; right: 1%; color: transparent;}
-</style>
+<title>HIHIQY1's projects</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+<link rel="stylesheet" type="text/css" href="styles.css"></link>
 </head>
 <body>
-<h1>HIHIQY1's projects</h1>
-<br>
-<li><a href="cilkre/index.html">cilkre</a></li>
-<li><a href="Agenqa/index.html">Agenqa</a></li>
-<li><a href="Diaa/index.html">Diaa</a></li>
-<li><a href="Qy's Text Editor/home.html">Qy's Text Editor</a></li>
-<li><a href="SoftwareDownloader/index.html">SoftwareDownloader</a></li>
-<li><a href="Srenec/index.html">Srenec</a></li>
-<li><a href="OpenCloseDiskTray/index.html">OpenCloseDiskTray</a></li>
-<li><a href="LeClick/index.html">LeClick</a></li>
-<li><a href="SpemTM/index.html">SpemTM / SpamTM</a></li>
-<br><br>
-<p>End of page</p>
-<a class="bottom right" href="About/home.html">About</a>
+<h1 class="title centeredh">HIHIQY1's projects</h1>
+<div id="projs">
+<div class="block">
+<h6>Avoiid</h6>
+<p>Avoiid is a game, made by me. It's a simple,
+<a class="hiddenlink" href="https://youtu.be/ON63ry4zo18">jet</a> addicting game &#x1f602;</p>
+<a class="projlink" href="Avoiid/spel.html">Read more...</a></div>
+
+<div class="block">
+<h6>cilkre</h6>
+<p>Cilkre is a game made by me. It's simple, 
+<a class="hiddenlink" href="https://youtu.be/ON63ry4zo18">jet</a> effective.</p>
+<a class="projlink" href="cilkre/index.html">Read more...</a></div>
+
+<div class="block">
+<h6>Agenqa</h6>
+<p>Agenqa is a leightweight, digital agenda.</p>
+<a class="projlink" href="Agenqa/index.html">Read more...</a></div>
+
+<div class="block">
+<h6>Diaa</h6>
+<p>Diaa is a presentation program. A little like Powerpoint. But it's different. And made by me.</p>
+<a class="projlink" href="Diaa/index.html">Read more...</a></div>
+
+<div class="block">
+<h6>Qy's text editor</h6>
+<p>My own text editor.</p>
+<a class="projlink" href="QysTextEditor/index.html">Read more...</a></div>
+
+<div class="block">
+<h6>Software Downloader</h6>
+<p>Downloads software.</p>
+<a class="projlink" href="SoftwareDownloader/index.html">Read more...</a></div>
+
+<div class="block">
+<h6>Srenec</h6>
+<p>Screensaver</p>
+<a class="projlink" href="Srenec/index.html">Read more...</a></div>
+
+<div class="block">
+<h6>OpenCloseDiskTray</h6>
+<p>Opens and closes the disk tray.</p>
+<a class="projlink" href="OpenCloseDiskTray/index.html">Read more...</a></div>
+
+<div class="block">
+<h6>LeClick</h6>
+<p>LeClick is a spamclick app(lication).</p>
+<a class="projlink" href="LeClick/index.html">Read more...</a></div>
+
+<div class="block">
+<h6>SpemTM</h6>
+<p>SpemTM can send very much messages in a very short time (spam).</p>
+<a class="projlink" href="SpemTM/index.html">Read more...</a></div>
+
+<div class="block" id="dutchblock">
+<h6>Dutch</h6>
+<p>I also have some Dutch projects. You can see them at my Dutch page.</p>
+<a class="projlink" href="dutch-index.html">Dutch page...</a></div>
+</div>
 </body>
 </html>
