Fixed a broken link
on the main page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="block">
 <h6>Qy's text editor</h6>
 <p>My own text editor.</p>
-<a class="projlink" href="QysTextEditor/index.html">Read more...</a></div>
+<a class="projlink" href="Qy's Text Editor/home.html">Read more...</a></div>
 
 <div class="block">
 <h6>Software Downloader</h6>
