--- a/cilkre/mobile/index.html
+++ b/cilkre/mobile/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>cilkre for mobile devices</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,5 +14,7 @@
                 <h4>Come back later for updates!</h4>
             </div>
         </div>
+
+        <script src="main.js"></script>
     </body>
 </html>
