--- a/Taekenlijst/index.html
+++ b/Taekenlijst/index.html
@@ -7,13 +7,13 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
-    <link rel="icon" sizes="256x256" href="Taekenlijst_logo256.png">
+    <link rel="icon" sizes="256x256" href="TaekenLijst_logo256.png">
 </head>
 
 <body>
     <div id="main">
         <div id="header">
-            <img id="logo" src="Taekenlijst_logo512.png">
+            <img id="logo" src="TaekenLijst_logo512.png">
             <div id="btn-add">+</div>
         </div>
 
