Updated Taekenlijst to v0.5
Added:
+ Welcome screen (may need some more styling later)
+ More bugs to fix later
Fixed:
* Issues on the iOS end

--- a/Taekenlijst/index.html
+++ b/Taekenlijst/index.html
@@ -1,3 +1,4 @@
+<!-- COPYLEFT (ᴐ) HIHIQY1 2018 -->
 <!DOCTYPE html>
 <html>
 
@@ -14,10 +15,13 @@
 
     <meta charset="utf-8" />
     <title>Taekenlijst</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
     <link rel="icon" sizes="256x256" href="TaekenLijst_logo256.png">
+    <link rel="apple-touch-icon" href="TaekenLijst_logo256.png">
+    <link rel="apple-touch-startup-image" href="startup.png">
 </head>
 
 <body>
@@ -52,6 +56,14 @@
                 </select>
                 <div id="btn-add-task" class="button">Add</div>
             </div>
+        </div>
+    </div>
+
+    <div id="welcomepanel">
+        <span class="title">Welcome to Taekenlijst!<br>
+        Be sure to add this to your home screen for the full app-experience!</span><br>
+        <div id="welcomeokbutton" class="button">
+            Ok, got it!
         </div>
     </div>
 
