Updated Taekenlijst to v0.7
Some very minimal, yet good changes. It's clearly some progress :)

--- a/Taekenlijst/index.html
+++ b/Taekenlijst/index.html
@@ -27,7 +27,7 @@
 <body>
     <div id="main">
         <div id="header">
-            <img id="logo" src="TaekenLijst_logo512.png">
+            <a href="https://HIHIQY1.github.io/HIHIQY1" target="_blank"><img id="logo" src="TaekenLijst_logo512.png"></a>
             <div id="btn-add">+</div>
         </div>
 
@@ -61,7 +61,9 @@
 
     <div id="welcomepanel">
         <span class="title">Welcome to Taekenlijst!<br>
-        Be sure to add this to your home screen for the full app-experience!</span><br>
+        Taekenlijst is a to do list (web)app.<br>
+        To install this, add this to your home screen.<br>
+        <b>Be sure to add this to your home screen for the full app-experience!</b></span><br>
         <div id="welcomeokbutton" class="button">
             Ok, got it!
         </div>
