--- a/Taekenlijst/index.html
+++ b/Taekenlijst/index.html
@@ -28,7 +28,7 @@
     <div id="main">
         <div id="header">
             <a href="https://HIHIQY1.github.io/HIHIQY1" target="_blank"><img id="logo" src="TaekenLijst_logo512.png"></a>
-            <div id="btn-add">+</div>
+            <div id="btn-add"><img src="plus.svg"></div>
         </div>
 
         <div id="list-container">
