Updated my About page to V3
Now it fits more with the theme of my projects page

--- a/About/home.html
+++ b/About/home.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <h1>Oh nee, je bent op de verkeerde pagina!</h1>
-<h3><a href="over.html">Klik hier</a> om naar de goede pagina te gaan</h3>
+<h3><a href="index.html">Klik hier</a> om naar de goede pagina te gaan</h3>
 <script>
-window.location = "over.html";
+window.location = "index.html";
 </script>
 </body>
 </html>
