--- a/About/over.html
+++ b/About/over.html
@@ -2,75 +2,15 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="styles.css">
-<title>Over Qy</title>
+<title>Over Qy - Doorsturen</title>
 <style>
 </style>
 </head>
 <body>
-<div id="js-unsafe">
-<h1>O nee!</h1>
-<p>
-Javascript staat helaas uit in je browser. Klik op de volgende link om JavaScript aan te zetten: <a href="https://enable-javascript.com/nl">https://enable-javascript.com/nl/</a>
-</p>
-</div>
-<div id="js-safe">
-<div id="menu-button">MENU</div>
-<div id="menu-frame">
-<h1>MENU</h1>
-<h6>De plek waar je nou géén eten kan bestellen...</h6>
-<div class="section-button" id="section-1-button">Over Qy</div>
-<div class="section-button" id="section-2-button">Qy als Youtuber</div>
-<div class="section-button" id="section-3-button">Qy als webdesigner</div>
-<div class="section-button" id="section-4-button">Contact</div>
-</div>
-<!--<div id="menu-helper"></div>-->
-<div class="section" id="section-1">
-<h2>Over Qy</h2>
-<p>Ik ben Qy, een jongen van <span id="yrs">(op moment van schrijven) 13</span> jaar, en ik vind filmpjes maken leuk!
-En ik vind code ook heel leuk. Zo heb ik al ongeveer 6 Windows applicaties gemaakt,
-en veel webpagina's (bijvoorbeeld deze!).<br>
-Al deze Windows applicaties kan je vinden op
-<a href="https://HIHIQY1.github.io/HIHIQY1">deze site</a>!<br>
-Als je het nog niet wist, ik heb ook een Youtube kanaal waarop ik allerlei filmpjes maak.
-Bijvoorbeeld over games. Ik ben een enorm fan van creatieve en 
-"<a href="https://nl.wikipedia.org/wiki/Sandbox_(spelgenre)"
-title="Dit zijn (kort uitgelegd) games waarin je van alles kan bekijken, maken, bouwen, verwijderen.">sandbox</a>" games
-(dus <b>niet</b> van die spellen waar geweld in voorkomt).<br>
-Ook heb ik zo'n ding dat ik er niet echt tegen kan dat er <b>IETS NIET GECENTREERD IS</b>. Alhoewel dit niet
-<b>HEEL</b> veel onrust veroorzaakt, is het wel een beetje erg irritant. Vandaar dat de meeste dingen op<br>
-deze pagina in het midden staan of gespiegeld zijn. :)</p>
-</div>
-<div class="section" id="section-2">
-<h3>Qy als Youtuber</h3>
-<p>Jahoor, ik doe ook aan Youtube.
-Da's een platform voor filmpjes.
-Dan kan je gratis en voor niets allemaal filmpies kieken.
-Op Youtube maak ik allerlei filmpjes. Rare filmpjes, game filmpjes,
-update filmpjes, en nog veeeeeeeeeeel meer andere soorten filmpies.
-Super leuk? Ik weet niet. Da's een mening.</p>
-</div>
-<div class="section" id="section-3">
-<h4>Qy als webdesigner</h4>
-<p>Jazeker, ik doe ook aan webdesign. (Jeetje wat ben ik een creatief persoon &#x1f602;)
-Deze pagina, en een aantal andere pagina's die door mij zijn gemaakt
-zijn niet ergens gekocht of van gestolen. Nee, ik heb ze helemaal
-zelf gemaakt. Dan ziet het er beter uit. Maar dat is een mening.
-Wil jij nou een webpagina gedesignt door mij? Contact me maar!</p>
-</div>
-<div class="section" id="section-4">
-<h1>Contact</h1>
-<p>Ik heb een aantal sociale medium.
-Hier staan ze op een rijtje:<br>
-<a href="https://youtube.com/HIHIQY1">Youtube</a><br>
-<a href="https://twitter.com/HIHIQY1">Twitter</a><br>
-<a href="https://twitter.com/Qytje">Twitter (tweede account)</a><br>
-Ik heb ook <a href="mailto:HIHIQY1+site@gmail.com">email</a><br>
-</p>
-</div>
-</div>
-
-<script src="script.js"></script>
-<script src="anticheat.js"></script>
+<h1>Oh nee, je bent op de verkeerde pagina!</h1>
+<h3><a href="index.html">Klik hier</a> om naar de goede pagina te gaan</h3>
+<script>
+window.location = "index.html";
+</script>
 </body>
 </html>
