--- a/dutch-index.html
+++ b/dutch-index.html
@@ -11,7 +11,7 @@
 <div class="block">
 <h6>Over mij</h6>
 <p>Een pagina over mij. Hier kan je lezen wat ik.</p>
-<a class="projlink" href="https://hihiqy1.github.io/HIHIQY1/Blog/">Lees meer...</a></div>
+<a class="projlink" href="https://hihiqy1.github.io/HIHIQY1/About/">Lees meer...</a></div>
 
 <div class="block">
 <h6>Mijn blog</h6>
