Updated Taekenlijst to V0.8.2
Bugs fixed
Probably added bugs
Also now you can't select buttons lol

--- a/Taekenlijst/index.html
+++ b/Taekenlijst/index.html
@@ -27,7 +27,7 @@
 <body>
     <div id="main">
         <div id="header">
-            <a href="https://HIHIQY1.github.io/HIHIQY1" target="_blank"><img id="logo" src="TaekenLijst_logo512.png"></a>
+            <img id="logo" src="TaekenLijst_logo512.png">
             <div id="btn-add"><img src="plus.svg"></div>
         </div>
 
