Updated QodeWords to V2
Because there were some bugs

--- a/QodeWords/index.html
+++ b/QodeWords/index.html
@@ -27,7 +27,8 @@
     <div id="end">
         <canvas id="scorec"></canvas>
         <div id="btn-retry">&#x2b6f;</div>
-        <div id="btn-menu">&#x2714;</div>
+        <div id="btn-menu">&#x2714;</div><br>
+        <div id="wrong-answers"></div>
     </div>
 
     <div id="swart"></div>
