--- a/LeClick/index.html
+++ b/LeClick/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>LeClick - Main Page</title>
+    <title>LeClick - Main Page</title>
 
-<link rel="stylesheet" type="text/css" href="../projectslayout.css">
-<link rel="shortcut icon" type="image/png" href="LeClick Logo Filled.png">
+    <link rel="stylesheet" type="text/css" href="../projectslayout.css">
+    <link rel="shortcut icon" type="image/png" href="LeClick Logo Filled.png">
 
-<style>
-body * {
-text-align: center;
-}
-</style>
+    <style>
+        body * {
+            text-align: center;
+        }
+    </style>
 </head>
+
 <body>
-<h1>LeClick</h1>
-<p>LeClick is a spamclick / autoclick application for Windows.</p>
-<p>Check it out, if you want.</p>
-<p>Oh, and bugs are present, so don't expect a stable program.</p>
-<a href="LeClick.exe" style="display: block;">Download Link</a>
+    <h1>LeClick</h1>
+    <p>LeClick is a spamclick / autoclick application for Windows.</p>
+    <p>Check it out, if you want.</p>
+    <p>Oh, and bugs are present, so don't expect a stable program.</p>
+    <a href="LeClick0.2.exe" style="display: block;">Download Link (V0.2)</a>
+    <a href="LeClick.exe" style="display: block;">Download Link (V0.1)(old)</a>
 </body>
+
 </html>
