--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <h1 class="title centeredh">HIHIQY1's projects</h1>
   <div id="projs">
     <div class="block">
+      <h6>qyApps</h6>
+      <p>qyApps are all apps created by me.</p>
+      <a class="projlink" href="qyApps/index.html">Read more...</a>
+    </div>
+  
+    <div class="block">
       <h6>Avoiid</h6>
       <p>Avoiid is a game, made by me. It's a simple,
         <a class="hiddenlink" href="https://youtu.be/ON63ry4zo18">jet</a> addicting game &#x1f602;</p>
