Updated qyApps to V0.2
Added an icon, fixed some style things and added a description to all apps.

--- a/qyApps/index.html
+++ b/qyApps/index.html
@@ -2,17 +2,21 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <title>qyApps</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <meta charset="utf-8" />
+    <title>qyApps</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="HIHIQY1">
+    <meta name="description" content="HIHIQY1's apps, all on one webpage! Most of them are free, too!">
+    <meta name="keywords" content="qyApps,qy,Apps,apps,Qy,HIHIQY1,hihiqy,hihi qy 1,hihiqy2,android,windows,web,internet,www,cordova,javascript">
+    <link rel="icon" href="qyAppsIcon.png">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 </head>
 
 <body>
-  <div id="toolbar"></div>
-  <div id="container"></div>
-  <div id="apppage"></div>
-  <script src="main.js"></script>
+    <div id="toolbar"></div>
+    <div id="container"></div>
+    <div id="apppage"></div>
+    <script src="main.js"></script>
 </body>
 
 </html>
