qyApps UI renewed! (v0.3)
Yay! Changelog:
* UI animations are now fresh :)
+ Copyable link for a specific app
+ Rich preview

--- a/qyApps/index.html
+++ b/qyApps/index.html
@@ -8,13 +8,19 @@
     <meta name="author" content="HIHIQY1">
     <meta name="description" content="HIHIQY1's apps, all on one webpage! Most of them are free, too!">
     <meta name="keywords" content="qyApps,qy,Apps,apps,Qy,HIHIQY1,hihiqy,hihi qy 1,hihiqy2,android,windows,web,internet,www,cordova,javascript">
+    <meta property="og:title" content="qyApps">
+    <meta property="og:description" content="HIHIQY1's apps, all on one webpage! Most of them are free, too!">
+    <meta property="og:image" content="qyAppsIcon.png">
     <link rel="icon" href="qyAppsIcon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 </head>
 
 <body>
-    <div id="toolbar"></div>
-    <div id="container"></div>
+    <div id="main-wrapper">
+        <div id="toolbar"></div>
+        <div id="container"></div>
+    </div>
+    <div id="apppagetransition"></div>
     <div id="apppage"></div>
     <script src="main.js"></script>
 </body>
