qyApps can now be a web app (v0.4)
Yay

--- a/qyApps/index.html
+++ b/qyApps/index.html
@@ -11,8 +11,12 @@
     <meta property="og:title" content="qyApps">
     <meta property="og:description" content="HIHIQY1's apps, all on one webpage! Most of them are free, too!">
     <meta property="og:image" content="qyAppsIcon.png">
-    <link rel="icon" href="qyAppsIcon.png">
+    <link rel="icon" sizes="512x512" href="qyAppsIcon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
 </head>
 
 <body>
