--- a/qQuiz/index.html
+++ b/qQuiz/index.html
@@ -50,6 +50,18 @@
         <div id="wrong-answers"></div>
     </div>
 
+    <div id="pnl-about" class="panel">
+        <h1 class="title">qQuiz</h1>
+        <p>Made with &hearts; by <a href="https://HIHIQY1.github.io/HIHIQY1">HIHIQY1</a></p>
+        <p>Libraries used:</p>
+        <ul>
+            <li><a href="https://github.com/pieroxy/lz-string">lz-string by Pieroxy</a></li>
+        </ul>
+        <div class="bottomcontrols">
+            <div class="button" id="btn-abouttomain">Back</div>
+        </div>
+    </div>
+
     <div id="swart"></div>
 
     <script src="libs/lz-string.min.js"></script>
