Better projects page
No more title overlapping the projects :D

--- a/dutch-index.html
+++ b/dutch-index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<h4 class="title centeredh">Qy's Nederlandse projecten</h4>
+<h4 id="title">Qy's Nederlandse projecten</h4>
 <div id="projs">
 
 <div class="block">
