Added some Analytics for me to enjoy

--- a/404nl.html
+++ b/404nl.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title>Onbekende pagina</title>
-<link rel="stylesheet" type="text/css" href="https://HIHIQY1.github.io/HIHIQY1/projectslayout.css">
+    <title>Onbekende pagina</title>
+    <link rel="stylesheet" type="text/css" href="https://HIHIQY1.github.io/HIHIQY1/projectslayout.css">
 
-<style>
-div#container {
-text-align: center;
-}
-h1 {
-font-size: 250%;
-}
-p, a {
-font-size: 150%;
-}
-h1, p, a {
-line-height: 25%;
-}
-</style>
+    <style>
+        div#container {
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 250%;
+        }
+
+        p,
+        a {
+            font-size: 150%;
+        }
+
+        h1,
+        p,
+        a {
+            line-height: 25%;
+        }
+    </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99870417-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-99870417-5');
+    </script>
 </head>
-<body onLoad="CheckLang();">
-<div id="container">
-<h1>Yo deze pagina bestaat niet.</h1>
-<p>Je kan weg gaan, als je wil.</p>
-<p>Of je kan hier blijven.</p>
-<a href="https://HIHIQY1.github.io/HIHIQY1/index.html">Klik hier als je terug wilt gaan</a>
-</div>
 
-<script>
-function CheckLang()
-{
-  // Credits naar iemand van stackoverflow. T.Hanks!!! >> https://stackoverflow.com/questions/8199760/how-to-get-the-browser-language-using-javascript
-  // Zo nice, iemand die naar deze code's kijkt :)
-  var userLang = navigator.language || navigator.userLanguage; 
-  if (userLang != "nl")
-  {
-    window.location.replace("404.html");
-  }
-}
-</script>
+<body onLoad="CheckLang();">
+    <div id="container">
+        <h1>Yo deze pagina bestaat niet.</h1>
+        <p>Je kan weg gaan, als je wil.</p>
+        <p>Of je kan hier blijven.</p>
+        <a href="https://HIHIQY1.github.io/HIHIQY1/index.html">Klik hier als je terug wilt gaan</a>
+    </div>
+
+    <script>
+        (() => {
+            var userLang = navigator.language || navigator.userLanguage;
+            if (userLang == "nl") {
+                window.location.replace("404nl.html");
+            }
+        })();
+    </script>
 </body>
+
 </html>
