Added more analytics for me to enjoy

--- a/LeClick/index.html
+++ b/LeClick/index.html
@@ -12,6 +12,16 @@
             text-align: center;
         }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99870417-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-99870417-5');
+    </script>
 </head>
 
 <body>
