--- a/NewYearCountdown/index.html
+++ b/NewYearCountdown/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Wachten tot het nieuwe jaar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99870417-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-99870417-5');
+    </script>
 </head>
+
 <body>
     <div id="nogniet">
         <h1>Nee, het is nog geen <span id="noggeen">2000</span>.</h1>
@@ -19,4 +31,5 @@
 
     <script src="scripts.js"></script>
 </body>
+
 </html>
