--- a/Verjaardag/index.html
+++ b/Verjaardag/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Ik ben nog niet jarig.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99870417-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-99870417-5');
+    </script>
 </head>
+
 <body>
     <div id="flash"></div>
     <div id="weljarig" class="display">
@@ -18,4 +30,5 @@
     </div>
     <script src="scripts.js"></script>
 </body>
+
 </html>
