--- a/SVGRenderer/index.html
+++ b/SVGRenderer/index.html
@@ -20,10 +20,15 @@
                 Step 1: Select a file
             </p>
             <div class="spacer2"></div>
-            <label class="input-file">
+            <label class="input-file" id="dropzone">
                 <input type="file" id="file-input" accept="image/svg+xml">
                 Upload
-            </label>
+            </label><br>
+            <p id="loadedfile">
+                Selected file: none
+            </p>
+            <div class="spacer2"></div>
+            <div class="button disabledbutton" id="btn-toscaling">Next step</div>
         </div>
     </div>
     <div class="panel blacktheme" id="pnl-scale">
@@ -34,6 +39,9 @@
             </p>
             <div class="spacer2"></div>
             <input type="number" min="1" max="100" id="scale" value="1"><br>
+            <p id="newsize">
+                The new size will be 100 * 100
+            </p>
             <div class="spacer2"></div>
             <div class="button" id="btn-render">Render!</div>
         </div>
