--- a/McCollough/index.html
+++ b/McCollough/index.html
@@ -21,9 +21,9 @@
 
 <body>
     <div id="pnl-home" class="panel centertext">
-        <h1>The McCollough Effect</h1>
+        <h1 id="h-the">The McCollough Effect</h1>
         <p id="par-home">
-            The McCollough effect was discovered in 1965 by Celese
+            The McCollough effect was discovered in 1965 by Celeste
             McCollough. The McCollough effect is a not-so-famous yet very
             strong effect.
         </p>
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div id="pnl-prestart" class="panel centertext">
-        <h1>How it works</h1>
+        <h1 id="h-howitworks">How it works</h1>
         <p id="par-prestart">
             If one would follow the given instructions, one would see
             colorless gratings appear colored.
@@ -46,7 +46,7 @@
         <div id="btn-tohome" class="button">Previous</div>
     </div>
     <div id="pnl-warning" class="panel centertext">
-        <h1>Warning</h1>
+        <h1 id="h-warning">Warning</h1>
         <p id="par-warning">
             Warning! The McCollough effect can be <b>very</b> dangerous! For
             example:<br />If done for 5 minutes, the effect can last
@@ -58,13 +58,13 @@
             Yes, I am sure I want to <b>start</b>.
         </div>
         <div class="spacer"></div>
-        <div class="button btn-home">
+        <div class="button btn-home" id="btn-unsurestart">
             No, go <b>back</b> to the main menu.
         </div>
     </div>
     <div id="pnl-maincheck" class="panel blackpanel centertext">
-        <h1>Check</h1>
-        <p>First, how do you see these lines?</p>
+        <h1 id="h-check">Check</h1>
+        <p id="par-check">First, how do you see these lines?</p>
         <div class="spacer"></div>
         <img class="effectimg" src="effect.svg" />
         <div class="spacer2"></div>
@@ -77,39 +77,31 @@
         </div>
     </div>
     <div id="pnl-lightlycolored" class="panel blackpanel centertext">
-        <h1>Oh</h1>
-        <p>
+        <h1 id="h-oh">Oh</h1>
+        <p id="par-oh">
             Either you are already affected by the McCollough effect, or you
             have some other thing that makes these lines appear colored. It
             is not advised to <i>do</i> the McCollough effect now.
         </p>
         <div class="spacer2"></div>
-        <div class="button btn-home">Go to the main menu</div>
+        <div class="button btn-home" id="btn-coloredhome">Go to the main menu</div>
     </div>
     <div id="pnl-instructions" class="panel blackpanel centertext">
-        <h1>Instructions</h1>
-        <p>
+        <h1 id="h-instructions">Instructions</h1>
+        <p id="par-instructions">
             To see the tinting effect, stare at the center of the following
-            two repeating images.
-        </p>
-        <p>
+            two repeating images.<br>
             The images will be shown for 10 seconds each, repeating until
-            the selected time is over.
-        </p>
-        <p>
+            the selected time is over.<br>
             The longer your selected time is, the longer the effect will
-            last.
-        </p>
-        <p>
+            last.<br>
             The effect will work best if being viewed at with both full
-            brightness and fullscreen.
+            brightness and fullscreen.<br>
+            Blinking is permitted.<br><br>
+            Selected time (in minutes):
         </p>
-        <p>Blinking is permitted.</p>
-        <div class="spacer2"></div>
-        <p>Selected time:</p>
         <div class="spacer"></div>
         <input id="num-time" type="number" min=".5" max="15" step=".5" value="3" />
-        <span>minutes</span>
         <div class="spacer"></div>
         <div id="btn-start" class="button">Start</div>
     </div>
@@ -117,16 +109,15 @@
         <img id="img-redgreen" src="red.svg" />
     </div>
     <div id="pnl-after" class="panel blackpanel centertext">
-        <h1>Done.</h1>
-        <p>That's it.</p>
-        <p>
+        <h1 id="h-done">Done.</h1>
+        <p id="par-same">That's it.<br>
             Now, please look at this image that is exactly the same as the
             one from the start. (It is unaltered)
         </p>
         <div class="spacer"></div>
         <img class="effectimg" src="effect.svg" />
         <div class="spacer"></div>
-        <p>
+        <p id="par-wentwell">
             If all went well, the vertical lines will seemingly have a
             reddish tint, and the horizontal lines will seemingly have a
             greenish tint.
@@ -135,9 +126,11 @@
         <div id="btn-tofinal" class="button">Next</div>
     </div>
     <div id="pnl-final" class="panel blackpanel centertext">
-        <h1>That's it.</h1>
-        <p>You've now experienced the McCollough effect.</p>
-        <p>Thanks for using this webpage.</p>
+        <h1 id="h-thatsit">That's it.</h1>
+        <p id="par-finish">
+            You've now experienced the McCollough effect.<br>
+            Thanks for using this webpage.
+        </p>
         <div class="spacer2"></div>
         <div id="btn-finish" class="button">Finish</div>
         <div class="spacer2"></div>
