Added some sharing info to the page with the McCollough Effect

--- a/McCollough/index.html
+++ b/McCollough/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>The McCollough Effect</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="author" content="HIHIQY1">
+    <meta name="description" content="A page explaining and showing the McCollough effect.">
+    <meta name="keywords" content="mc,mccollough,mcollough,mcolough,mccolough,mcologh,mccollogh,effect,efect,HIHIQY1,mcc">
+    <meta property="og:title" content="The McCollough Effect">
+    <meta property="og:description" content="A page explaining and showing the McCollough effect.">
+    <meta property="og:image" content="effect_icon.svg">
+    <link rel="icon" sizes="200x200" href="effect_icon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
