--- a/McCollough/index.html
+++ b/McCollough/index.html
@@ -10,9 +10,19 @@
     <meta name="author" content="HIHIQY1">
     <meta name="description" content="A page explaining and showing the McCollough effect.">
     <meta name="keywords" content="mc,mccollough,mcollough,mcolough,mccolough,mcologh,mccollogh,effect,efect,HIHIQY1,mcc">
+
     <meta property="og:title" content="The McCollough Effect">
+    <meta property="og:type" content="website">
     <meta property="og:description" content="A page explaining and showing the McCollough effect.">
-    <meta property="og:image" content="effect_icon.svg">
+    <meta property="og:image" content="effect.png">
+
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:site" content="@HIHIQY1">
+    <meta property="twitter:creator" content="@HIHIQY1">
+    <meta property="twitter:title" content="The McCollough Effect">
+    <meta property="twitter:description" content="A page explaining and showing the McCollough effect.">
+    <meta property="twitter:image" content="effect.png">
+
     <link rel="icon" sizes="200x200" href="effect_icon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 
@@ -41,6 +51,7 @@
         <div class="button" id="btn-wiki">
             Wikipedia page on the McCollough Effect
         </div>
+        <div class="spacer10"></div>
     </div>
     <div id="pnl-prestart" class="panel centertext">
         <h1 id="h-howitworks">How it works</h1>
@@ -52,6 +63,7 @@
         <div class="button" id="btn-towarning">Next</div>
         <div class="spacer"></div>
         <div id="btn-tohome" class="button">Previous</div>
+        <div class="spacer10"></div>
     </div>
     <div id="pnl-warning" class="panel centertext">
         <h1 id="h-warning">Warning</h1>
@@ -69,6 +81,7 @@
         <div class="button btn-home" id="btn-unsurestart">
             No, go <b>back</b> to the main menu.
         </div>
+        <div class="spacer10"></div>
     </div>
     <div id="pnl-maincheck" class="panel blackpanel centertext">
         <h1 id="h-check">Check</h1>
@@ -83,6 +96,7 @@
         <div class="button" id="btn-tolightlycolored">
             As black and lightly colored lines
         </div>
+        <div class="spacer10"></div>
     </div>
     <div id="pnl-lightlycolored" class="panel blackpanel centertext">
         <h1 id="h-oh">Oh</h1>
@@ -93,6 +107,7 @@
         </p>
         <div class="spacer2"></div>
         <div class="button btn-home" id="btn-coloredhome">Go to the main menu</div>
+        <div class="spacer10"></div>
     </div>
     <div id="pnl-instructions" class="panel blackpanel centertext">
         <h1 id="h-instructions">Instructions</h1>
@@ -110,8 +125,9 @@
         </p>
         <div class="spacer"></div>
         <input id="num-time" type="number" min=".5" max="15" step=".5" value="3" />
-        <div class="spacer"></div>
+        <div class="spacer2"></div>
         <div id="btn-start" class="button">Start</div>
+        <div class="spacer10"></div>
     </div>
     <div id="pnl-main" class="panel blackpanel centertext">
         <img id="img-redgreen" src="red.svg" />
@@ -132,6 +148,7 @@
         </p>
         <div class="spacer2"></div>
         <div id="btn-tofinal" class="button">Next</div>
+        <div class="spacer10"></div>
     </div>
     <div id="pnl-final" class="panel blackpanel centertext">
         <h1 id="h-thatsit">That's it.</h1>
