Better style and fixed image on the McCollough page

--- a/McCollough/index.html
+++ b/McCollough/index.html
@@ -21,7 +21,7 @@
     <meta property="twitter:creator" content="@HIHIQY1">
     <meta property="twitter:title" content="The McCollough Effect">
     <meta property="twitter:description" content="A page explaining and showing the McCollough effect.">
-    <meta property="twitter:image" content="effect.png">
+    <meta property="twitter:image" content="https://hihiqy1.github.io/HIHIQY1/McCollough/effect.png">
 
     <link rel="icon" sizes="200x200" href="effect_icon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
