Added saved quizzes to qQuiz!!!                                         Phew, this took a while! But it's worth it :D

--- a/qQuiz/index.html
+++ b/qQuiz/index.html
@@ -36,10 +36,22 @@
         </div>
     </div>
 
+    <div id="pnl-savedquizzes" class="panel">
+        <div id="savedquizzescontainer">
+            <h1 class="subtitle">Saved Quizzes</h1>
+        </div>
+        <div class="bottomcontrols">
+            <div class="button" id="btn-savedtomain">Back</div>
+            <div class="button" id="btn-clearsavedquizzes">Delete all</div>
+        </div>
+    </div>
+
     <div id="pnl-quizcredits" class="panel">
         <div id="quizcredits"></div>
         <div class="bottomcontrols">
             <div class="button" id="btn-creditstoload">Back</div>
+            <div class="button" id="btn-creditssave">Save</div>
+            <div class="button" id="btn-creditsunsave">Unsave</div>
             <div class="button" id="btn-startquiz">Start</div>
         </div>
     </div>
