Updated the McCollough effect page! (added a share button + improved the duration input)

--- a/McCollough/index.html
+++ b/McCollough/index.html
@@ -51,7 +51,16 @@
         <div class="button" id="btn-wiki">
             Wikipedia page on the McCollough Effect
         </div>
+        <div class="spacer"></div>
+        <div class="button" id="btn-share">
+            Share this page
+        </div>
         <div class="spacer10"></div>
+        <div id="copiedwrapper">
+            <div id="copied">
+                Link copied to clipboard!
+            </div>
+        </div>
     </div>
     <div id="pnl-prestart" class="panel centertext">
         <h1 id="h-howitworks">How it works</h1>
@@ -124,7 +133,7 @@
             Selected time (in minutes):
         </p>
         <div class="spacer"></div>
-        <input id="num-time" type="number" min=".5" max="15" step=".5" value="3" />
+        <input id="num-time" type="number" min=".5" max="30" step=".5" value="5" />
         <div class="spacer2"></div>
         <div id="btn-start" class="button">Start</div>
         <div class="spacer10"></div>
