Updated Dutch projects page Added the McCollough effect as a project

--- a/dutch-index.html
+++ b/dutch-index.html
@@ -25,6 +25,12 @@
         </div>
 
         <div class="block">
+            <h6>McCollough Effect</h6>
+            <p>Een pagina die het McCollough Effect uitlegt en laat zien</p>
+            <a class="projlink" href="McCollough/index.html">Lees meer...</a>
+        </div>
+
+        <div class="block">
             <h6>Mijn blog</h6>
             <p>Ik heb ook een blog, maar dat is soms redelijk inactief...</p>
             <a class="projlink" href="https://hihiqy1.github.io/HIHIQY1/Blog/">Lees meer...</a>
