Added The Dotifier and SVG Renderer SVG Renderer already existed, but it wasn't "public" yet. The Dotifier is a handy page that converts images into dots.

--- a/404.html
+++ b/404.html
@@ -42,7 +42,8 @@ permalink: /404.html
 
 <body>
     <div id="container">
-        <h1>Yo this page doesn't exist.</h1>
+        <h1>404</h1>
+        <p>This page does not exist.</p>
         <p>You can exit, if you want.</p>
         <p>Or you can stay here.</p>
         <a href="https://HIHIQY1.github.io/HIHIQY1/index.html">Click here if you want to go back</a>
