--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
         </div>
 
         <div class="block">
+            <h6>The Dotifier</h6>
+            <p>Easily convert images into dots.</p>
+            <a class="projlink" href="Dotifier/index.html">More...</a>
+        </div>
+
+        <div class="block">
+            <h6>SVG Renderer</h6>
+            <p>Render SVGs as PNGs very easily.</p>
+            <a class="projlink" href="SVGRenderer/index.html">Read more...</a>
+        </div>
+
+        <div class="block">
             <h6>McCollough Effect</h6>
             <p>A page that explains and shows the McCollough effect.</p>
             <a class="projlink" href="McCollough/index.html">Read more...</a>
