--- a/404nl.html
+++ b/404nl.html
@@ -37,9 +37,10 @@
     </script>
 </head>
 
-<body onLoad="CheckLang();">
+<body>
     <div id="container">
-        <h1>Yo deze pagina bestaat niet.</h1>
+        <h1>404</h1>
+        <p>Deze pagina bestaat niet.</p>
         <p>Je kan weg gaan, als je wil.</p>
         <p>Of je kan hier blijven.</p>
         <a href="https://HIHIQY1.github.io/HIHIQY1/index.html">Klik hier als je terug wilt gaan</a>
