Now the redirect *should* work
In theory

--- a/404.html
+++ b/404.html
@@ -50,6 +50,9 @@ permalink: /404.html
     </div>
 
     <script src="redirect.js"></script>
+    <script>
+        window.location = window.location.toString().replace("/HIHIQY1", "");
+    </script>
 </body>
 
 </html>
