--- a/404nl.html
+++ b/404nl.html
@@ -47,6 +47,9 @@
     </div>
 
     <script src="redirect.js"></script>
+    <script>
+        window.location = window.location.toString().replace("/HIHIQY1", "");
+    </script>
 </body>
 
 </html>
